# circumplex-converter

./: README.md  pyproject.toml
docs/examples/: sample.yaml
src/circumplex_converter/: cli.py  converter.py  schema.py
